# smarts-n-yieldpredict

./: .gitignore  1.py  2.py  README.md  Structure des Fichiers.md  agro_math_engine.py  app.py  ask_question.py  boua.bat  extraction avec rasterio.py  import_log.txt  requirements.txt  requirements_cloud.txt  train_and_infer.py  train_model.py  vector_store.py  vectorized_dataset.parquet  y.py
backend/: Dockerfile.api  fastapi_server.py  models.py
components/: ndvi_viewer.py  npk_recommender.py  postgres_browser.py
frontend/: react_dashboard.jsx
legacy/: .replit  pyproject.toml  replit.md
models/: train_yield_predictor.py  xgb_rendement.joblib  xgboost_model_npp_mali.pkl
notebooks/: test_ndvi_engine.ipynb  test_recommendation_logic.ipynb
pages/: 10_Social_Network.py  11_IoT_Monitoring.py  1_Dashboard.py  2_Yield_Prediction.py  3_Agro_Monitoring.py  5_Data_Upload.py  6_Disease_Detection.py  7_Smart_Fertilizer.py  8_Climate_Forecasting.py  9_Satellite_Imagery.py
script_plantset/: 1_data_cleaner.py  2_text_mapper.py  3_dataset_loader.py  4_model_builder.py  5_train.py  6_evaluate.py  7_infer.py  README.md  __init__.py  requirements.txt  scaler_tpu.py
services/: auth_service.py  document_service.py  file_manager.py  model_optimizer.py
smart_agro_tools/: dataset_loader.py
smart_fertilizer/: .replit  README.md  pyproject.toml  replit.md  run_fertilizer.py
templates/: base.html
tests/: test_fertilizer_api.py
utils/: __init__.py  advanced_ai.py  advanced_disease_detector.py  advanced_document_processor.py  animations.py  auth.py  blockchain_system.py  (+28 more)
(+45 files in other folders)
