[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "email-validator>=2.3.0",
    "flask-login>=0.6.3",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "googletrans>=4.0.2",
    "gunicorn>=23.0.0",
    "markdown>=3.8.2",
    "numpy>=2.3.2",
    "openai>=1.102.0",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "python-dateutil>=2.9.0.post0",
    "python-pptx>=1.0.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
    "flask-migrate>=4.1.0",
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "textstat>=0.7.10",
]
